k8s/ollama/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
  annotations:
    cloud.google.com/backend-config: '{"default": "ollama-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 11434
      protocol: TCP
      name: http
  selector:
    app: ollama
  type: ClusterIP
